chore: stabilize launcher before next updates
- Remove automatic account creation on startup; ensure read-only initialization

- Implement duplicate account protection for Microsoft (profile UUID) and Offline accounts

- Fix legacy vault migration to prevent resurrecting deleted accounts

- Synchronize native Edge WebView2 HiDPI physical bounds in MicrosoftAuthModal

- Unify Accounts view into a single list with dark theme styling

- Fix IDE field and variable warnings in EzzSkinTextureProvider

- Provide default Fabric metadata for ezz-skin-mod standalone packaging

- Pass full clean build and complete multi-module test suite